# vt_franka

./: .gitignore  README.md  pytest.ini
robot_controller/: README.md  environment.yml  pyproject.toml
robot_controller/config/: controller.yaml
robot_controller/scripts/: bootstrap_env.sh  demo.py  polymetis_minimal_motion.py  run_controller.sh
robot_controller/src/vt_franka_controller/: __init__.py  cli.py  settings.py
robot_controller/src/vt_franka_controller/api/: app.py  demo_state_app.py
robot_controller/src/vt_franka_controller/backends/: __init__.py  base.py  mock.py  polymetis.py
robot_controller/src/vt_franka_controller/control/: __init__.py  service.py
robot_controller/tests/: test_mock_api.py
robot_workspace/: README.md  environment.yml  pyproject.toml  requirements.txt
robot_workspace/Log/: OrbbecSDK.log.txt
robot_workspace/config/: workspace.yaml
robot_workspace/scripts/: bootstrap_env.sh  replay_aligned_episode.py  start_gelsight.sh  start_state_bridge.sh  start_teleop.sh
robot_workspace/src/vt_franka_workspace/: __init__.py  cli.py  demo_publish.py  replay.py  settings.py  visualization.py
robot_workspace/src/vt_franka_workspace/auto_collect/: __init__.py  bowl_task.py  state_recorder.py
robot_workspace/src/vt_franka_workspace/collect/: __init__.py  controller_state.py  supervisor.py
robot_workspace/src/vt_franka_workspace/controller/: __init__.py  client.py
robot_workspace/src/vt_franka_workspace/examples/: __init__.py  policies.py
robot_workspace/tests/: test_auto_collect_tissue.py  test_collect_supervisor.py  test_gelsight_publisher.py  test_operator_ui.py  test_orbbec.py  test_postprocess_alignment.py  test_quest_udp.py  test_recording.py  test_replay.py  test_rollout_supervisor.py  test_teleop.py  test_visualization.py
shared/: pyproject.toml
shared/src/vt_franka_shared/: __init__.py  buffers.py  config.py  interpolation.py  models.py  pose_math.py  timing.py  transforms.py
shared/tests/: test_interpolation.py  test_models.py  test_transforms.py
(+50 files in other folders)
