[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "vt-franka-controller"
version = "0.1.0"
description = "High-frequency Franka controller for VT Franka"
requires-python = ">=3.8"
dependencies = [
  "fastapi>=0.110",
  "numpy>=1.23",
  "pydantic>=2.6",
  "pymongo>=4.6",
  "PyYAML>=6.0",
  "requests>=2.31",
  "scipy>=1.10",
  "uvicorn>=0.29",
]

[project.scripts]
vt-franka-controller = "vt_franka_controller.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
